--- a/child-app/app1/package.json
+++ b/child-app/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-micro-app",
+  "name": "app1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2",
-    "@micro-zoe/micro-app": "^0.8.7"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
